fix button from jumping when hovering

--- a/assets/css/frontpage/landing-page.css
+++ b/assets/css/frontpage/landing-page.css
@@ -169,3 +169,6 @@ footer {
 p.copyright {
     margin: 15px 0 0;
 }
+.btn-outline {
+    border: 2px solid #2077b2;
+}
